Adding colors, styles, and gradle dependencies

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#fafafa</color>
+    <color name="colorSecondary">#3F51B5</color>
+    <color name="colorPrimaryLight">#FFFFFF</color>
+    <!--<color name="colorPrimaryDark">#c7c7c7</color>-->
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimaryText">#000000</color>
+    <color name="colorSecondaryText">#ffffff</color>
+    <color name="colorAccent">#536DFE</color>
+    <color name="transparent">#00FAFAFA</color>
+    <color name="gray_darker">#A9A9A9</color>
+
+    <color name="colorSuccess">#2ecc71</color>
+    <color name="colorWarning">#ff9f43</color>
+
+    <color name="colorUnderlineDivider">#a5afaeae</color>
+
 </resources>
