--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -27,7 +28,119 @@
             card_view:cardElevation="4dp"
             card_view:cardUseCompatPadding="true">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="8dp">
 
+                <ImageView
+                    android:id="@+id/item_resto_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="150dp"
+                    android:src="@drawable/suksema"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="8dp">
+
+                    <TextView
+                        android:id="@+id/item_resto_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Suksema Sushi Bar"
+                        android:textColor="@color/colorPrimaryText"
+                        android:textSize="20sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/item_resto_subtitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Sushi and Japanese Restaurant"
+                        android:textColor="@color/colorSecondaryText"
+                        android:textSize="16sp"
+                        android:textStyle="normal"/>
+
+                    <LinearLayout
+                        android:layout_marginTop="8dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:materialIcon="timer"
+                            app:materialIconSize="24dp"
+                            />
+                        <TextView
+                            android:id="@+id/item_resto_openhour_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="4dp"
+                            android:textSize="16sp"
+                            android:textColor="@color/colorPrimaryText"
+                            tools:text="Open Hours "/>
+                        <TextView
+                            android:id="@+id/item_resto_openhour"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="4dp"
+                            android:textSize="16sp"
+                            android:textColor="@color/colorPrimaryText"
+                            tools:text="9 pm until 11 pm"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="44dp"
+                        android:layout_marginTop="8dp"
+                        android:gravity="end"
+                        android:orientation="horizontal">
+
+                        <mehdi.sakout.fancybuttons.FancyButton
+                            android:id="@+id/item_resto_rate"
+                            style="@style/Widget.AppCompat.Button.Borderless"
+                            android:layout_width="100dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="end"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginRight="8dp"
+                            android:textSize="12sp"
+                            fancy:fb_defaultColor="@color/colorSecondary"
+                            fancy:fb_fontIconResource="\uf005"
+                            fancy:fb_iconPosition="left"
+                            fancy:fb_radius="30dp"
+                            fancy:fb_text="Rate"
+                            fancy:fb_textColor="#FFFFFF" />
+
+                        <mehdi.sakout.fancybuttons.FancyButton
+                            android:id="@+id/item_resto_share"
+                            style="@style/Widget.AppCompat.Button.Borderless"
+                            android:layout_width="100dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="end"
+                            android:layout_marginTop="16dp"
+                            android:textSize="12sp"
+                            fancy:fb_defaultColor="@color/colorAccent"
+                            fancy:fb_fontIconResource="\uf1e0"
+                            fancy:fb_iconPosition="left"
+                            fancy:fb_radius="30dp"
+                            fancy:fb_text="Share"
+                            fancy:fb_textColor="#FFFFFF" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
