--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#fafafa</color>
+    <color name="colorPrimary">#4CAF50</color>
     <color name="colorSecondary">#3F51B5</color>
     <color name="colorPrimaryLight">#FFFFFF</color>
     <!--<color name="colorPrimaryDark">#c7c7c7</color>-->
-    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimaryDark">#388E3C</color>
     <color name="colorPrimaryText">#000000</color>
-    <color name="colorSecondaryText">#ffffff</color>
+    <color name="colorSecondaryText">#616161</color>
     <color name="colorAccent">#536DFE</color>
     <color name="transparent">#00FAFAFA</color>
     <color name="gray_darker">#A9A9A9</color>
-
     <color name="colorSuccess">#2ecc71</color>
     <color name="colorWarning">#ff9f43</color>
 
