--- a/app/src/main/res/layout/activity_detail_startup.xml
+++ b/app/src/main/res/layout/activity_detail_startup.xml
@@ -6,7 +6,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".TourDetailActivity">
+        tools:context=".DetailStartupActivity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -41,7 +41,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/image"
+                    android:id="@+id/detail_image"
                     android:layout_width="match_parent"
                     android:layout_height="350dp"
                     android:src="@drawable/airbnb"
@@ -55,7 +55,7 @@
                     >
 
                     <TextView
-                        android:id="@+id/name"
+                        android:id="@+id/detail_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
@@ -65,10 +65,10 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/subtitle"
+                        android:id="@+id/detail_type"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="eCommerce/Marketplace	"
+                        android:text="eCommerce/Marketplace"
                         android:textColor="@color/colorSecondaryText"
                         android:textSize="16sp"
                         android:textStyle="normal"/>
@@ -79,7 +79,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/img_item_photo"
+                            android:id="@+id/detail_founderimage"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             tools:src="@android:color/darker_gray"/>
@@ -88,15 +88,15 @@
                             android:layout_height="match_parent"
                             android:orientation="vertical">
                             <TextView
-                                android:id="@+id/item_resto_openhour_title"
+                                android:id="@+id/founder_title"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
                                 android:textSize="14sp"
                                 android:textColor="@color/colorSecondaryText"
-                                tools:text="Founder"/>
+                                android:text="Founder"/>
                             <TextView
-                                android:id="@+id/openhour"
+                                android:id="@+id/detail_founder"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
@@ -140,7 +140,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/overview"
+                        android:id="@+id/detail_overview"
                         android:layout_marginTop="8dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -174,7 +174,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/cuisinetype"
+                        android:id="@+id/detail_valuation"
                         android:layout_marginTop="8dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -209,7 +209,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/averagecost"
+                        android:id="@+id/detail_investors"
                         android:layout_marginTop="8dp"
                         android:paddingBottom="80dp"
                         android:layout_width="match_parent"
